--- a/index.html
+++ b/index.html
@@ -17,5 +17,17 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <header id="header">
+      <div class="container">
+        <a href="#" class="logo">Osama</a>
+        <ul class="main-nav">
+          <li><a href="#articles">articles</a></li>
+          <li><a href="#gallery">gallery</a></li>
+          <li><a href="#features">features</a></li>
+          <li><a href="#">other links</a></li>
+        </ul>
+      </div>
+    </header>
+  </body>
 </html>
