Added Landing Section

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="ttps://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
   </head>
   <body>
+    <!-- Start Header -->
     <header id="header">
       <div class="container">
         <a href="#" class="logo">Osama</a>
@@ -29,5 +30,25 @@
         </ul>
       </div>
     </header>
+    <!-- End Header -->
+    <!-- Start Landing -->
+    <div class="landing">
+      <div class="container">
+        <div class="text">
+          <h1>Welcome, To Osama World</h1>
+          <p>
+            Here Iam gonna share everything about my life. Books Iam reading,
+            Games Iam Playing, Stories and Events
+          </p>
+        </div>
+        <div class="image">
+          <img src="imgs/landing-image.png" alt="" />
+        </div>
+      </div>
+      <a class="go-down" href="#articles">
+        <i class="fas fa-angle-double-down fa-2x"></i>
+      </a>
+    </div>
+    <!-- End Landing -->
   </body>
 </html>
