--- a/index.html
+++ b/index.html
@@ -232,6 +232,43 @@
       </div>
     </div>
     <!-- End Articles -->
+    <!-- Start Gallery -->
+    <div id="gallery" class="gallery">
+      <h2 class="main-title">gallery</h2>
+      <div class="container">
+        <div class="box">
+          <div class="image">
+            <img src="images/gallery-01.png" alt="" />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image">
+            <img src="images/gallery-02.png" alt="" />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image">
+            <img src="images/gallery-03.jpg" alt="" />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image">
+            <img src="images/gallery-04.png" alt="" />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image">
+            <img src="images/gallery-05.jpg" alt="" />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image">
+            <img src="images/gallery-06.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Gallery -->
 
     <script src="js/main.js"></script>
   </body>
