--- a/index.html
+++ b/index.html
@@ -726,6 +726,46 @@
       </div>
     </div>
     <!-- End Work Steps -->
+    <!-- Start Event -->
+    <div class="events" id="events">
+      <h2 class="main-title">Latest Events</h2>
+      <div class="container">
+        <img src="images/events.png" alt="" />
+        <div class="info">
+          <div class="time">
+            <div class="unit">
+              <span class="days">364</span>
+              <span>Days</span>
+            </div>
+            <div class="unit">
+              <span class="hours">23</span>
+              <span>Hours</span>
+            </div>
+            <div class="unit">
+              <span class="minutes">59</span>
+              <span>Minutes</span>
+            </div>
+            <div class="unit">
+              <span class="seconds">59</span>
+              <span>Seconds</span>
+            </div>
+          </div>
+          <h2>Tech Masters Event 2022</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Et vero
+            tenetur doloremque iusto ut adipisci quam ratione aliquam excepturi
+            nulla in harum, veritatis porro
+          </p>
+        </div>
+        <div class="subscribe">
+          <form>
+            <input type="email" placeholder="Enter Your Email" />
+            <input type="submit" value="subscribe" />
+          </form>
+        </div>
+      </div>
+    </div>
+    <!-- End Event -->
     <script src="js/main.js"></script>
   </body>
 </html>
