--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                   >
                 </li>
                 <li>
-                  <a href="#video"
+                  <a href="#videos"
                     ><i class="far fa-play-circle fa-fw"></i> Top Videos</a
                   >
                 </li>
@@ -824,6 +824,55 @@
       </div>
     </div>
     <!-- End Pricing -->
+    <!-- Start Videos -->
+    <div class="videos" id="videos">
+      <h2 class="main-title">Top Videos</h2>
+      <div class="container">
+        <div class="holder">
+          <div class="list">
+            <div class="name">
+              Top Videos
+              <i class="fas fa-random"></i>
+            </div>
+            <ul>
+              <li>
+                How To Create Sub Domain
+                <span>05:18</span>
+              </li>
+              <li>
+                Playing With The DNS
+                <span>03:18</span>
+              </li>
+              <li>
+                Everything About The Virtual Hosts
+                <span>05:25</span>
+              </li>
+              <li>
+                How To monitor Your Website
+                <span>04:16</span>
+              </li>
+              <li>
+                Uncharted Beating the last boss
+                <span>07:48</span>
+              </li>
+              <li>
+                Ys Oath in felghana overview
+                <span>03:12</span>
+              </li>
+              <li>
+                Ys Series all games ending
+                <span>08:10</span>
+              </li>
+            </ul>
+          </div>
+          <div class="preview">
+            <img src="images/video-preview.jpg" alt="" />
+            <div class="info">Everything about the virtual hosts</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Videos -->
     <script src="js/main.js"></script>
   </body>
 </html>
