Added Discount Section

--- a/index.html
+++ b/index.html
@@ -900,6 +900,36 @@
       </div>
     </div>
     <!-- End Stats -->
+    <!-- Start Discount -->
+    <div class="discount" id="discount">
+      <div class="content">
+        <h2>We Have A Discount</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi
+          asperiores consectetur, recusandae ratione provident necessitatibus,
+          cumque delectus commodi fuga praesentium beatae. Totam vel similique
+          laborum dicta aperiam odit doloribus corporis.
+        </p>
+        <img src="images/discount.png" alt="" />
+      </div>
+      <div class="form">
+        <div class="contentTwo">
+          <h2>Request A Discount</h2>
+          <form>
+            <input class="input" type="text" placeholder="Your Name" />
+            <input class="input" type="text" placeholder="Your Name" />
+            <input class="input" type="text" placeholder="Your Phone" />
+            <textarea
+              placeholder="Tell Us About Your Needs"
+              name="message"
+              class="input"
+            ></textarea>
+            <input type="submit" value="Send" />
+          </form>
+        </div>
+      </div>
+    </div>
+    <!-- End Discount -->
     <script src="js/main.js"></script>
   </body>
 </html>
